upgrade to electron 19 and fix related issues

--- a/src/assets/templates/report.html
+++ b/src/assets/templates/report.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Type"
       author="Karl Storz GmbH & Co. KG"
     />
-    <title>TELE PACK X GI</title>
+    <title>Report</title>
     <link href="report_style.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -22,7 +22,7 @@
               src="colon-and-rectum.png"
             />
           </div>
-          <h1>Colonoscopy Report</h1>
+          <h1>Endoscopy Report</h1>
         </div>
       </div>
 
